<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="projeto.inf311.pokemongo.Controller.CadastrarActivity"
    android:background="@drawable/pallet2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#992315"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="39dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="Voltar"
            app:srcCompat="@drawable/ic_action_back" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/cadastrar"
            android:textColor="#FFF"
            android:textSize="18sp"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="70dp"
        android:alpha="0.8"

        android:background="@drawable/rounded"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="20dp"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nome"
                android:textColor="#000" />

            <EditText
                android:id="@+id/edtNome"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000"
                android:ems="10"
                android:foregroundTint="#118370"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user"
                android:textColor="#000" />

            <EditText
                android:id="@+id/edtLogin"
                style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000"
                android:ems="10"
                android:foregroundTint="#118370"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/senha"
                android:textColor="#000" />

            <EditText
                android:id="@+id/edtSenha"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000"
                android:ems="10"
                android:foregroundTint="#118370"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirmacao_de_senha"
                android:textColor="#000" />

            <EditText
                android:id="@+id/edtConfSenha"
                style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000"
                android:ems="10"
                android:foregroundTint="#118370"
                android:inputType="textPassword"
                android:singleLine="false" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sexo"
                        android:textColor="#000" />

                    <RadioGroup
                        android:id="@+id/rgopcoes"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/btnMasc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/masc"
                        android:textColor="#000"
                        android:buttonTint="#118370" />

                    <RadioButton
                        android:id="@+id/btnFem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fem"
                        android:textColor="#000"
                        android:buttonTint="#118370" />

                    </RadioGroup>

                </LinearLayout>

                <Button
                    android:id="@+id/btnCadastrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_buttom"
                    android:onClick="Cadastrar"
                    android:padding="15dp"
                    android:text="@string/cadastrar"
                    android:textColor="@color/white" />

            </FrameLayout>

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
