<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pallet2"
    tools:context="projeto.inf311.pokemongo.Controller.LoginActivity">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:alpha="0.8"

        android:background="@drawable/rounded"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="20dp"
        android:visibility="visible"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textColor="#000" />

            <EditText
                android:id="@+id/edtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000"
                android:ems="10"
                android:foregroundTint="#118370"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/senha"
                android:textColor="#000" />

            <EditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000"
                android:ems="10"
                android:foregroundTint="#118370"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/rounded_buttom"
                android:onClick="Login"
                android:text="@string/login"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="Cadastrar"
                android:text="Cadastrar"
                android:textAllCaps="false"
                android:textColor="#992315"
                tools:text="@string/cadastrar" />
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>