<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="projeto.inf311.pokemongo.Controller.DetalhesPokedexActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#992315"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="Seta Voltar"
                android:onClick="VoltarMapa"
                app:srcCompat="@drawable/ic_action_back" />

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="."
                android:textColor="#FFF"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="top|center"
                app:srcCompat="@drawable/p1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/numero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:text="#???" />

                <TextView
                    android:id="@+id/nome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="TextView"
                    android:textColor="#000"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/capturados"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ncapturados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textColor="#000"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.06"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tipo"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tipo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="TextView"
                    android:textColor="#fff"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tipo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="TextView"
                    android:textColor="#fff"
                    android:textSize="12sp" />

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_buttom"
                android:onClick="locais"
                android:padding="15dp"
                android:text="@string/locais"
                android:textColor="#FFF" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
